--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
       html,
       body {
-        height: 100%; /* задаём полную высоту страницы */
+        height: 100%;
         margin: 0;
         display: flex;
         flex-direction: column;
       }
 
       .faq-container {
-        flex: 1; /* занимает всё свободное место между header и footer */
+        flex: 1;
       }
 
       footer {
@@ -43,6 +43,15 @@
         font-size: 26px;
         font-weight: 700;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
+
+      .section-title {
+        font-size: 22px;
+        font-weight: 700;
+        color: #3c9bf2;
+        margin: 30px 0 15px 0;
+        padding-bottom: 8px;
+        border-bottom: 2px solid #eaeaea;
       }
 
       .search-box {
@@ -92,7 +101,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        font-size: 18px; /* базовый размер для десктопа */
+        font-size: 18px;
       }
 
       .faq-question::after {
@@ -119,7 +128,6 @@
         padding: 18px;
       }
 
-      /* Media queries для разных экранов */
       @media (max-width: 1024px) {
         .faq-question {
           font-size: 26px;
@@ -153,7 +161,6 @@
         }
       }
 
-      /* карточки палат */
       .rooms {
         display: flex;
         flex-direction: column;
@@ -224,6 +231,9 @@
     </div>
 
     <div class="faq-container" id="faq">
+      <!-- Раздел 3: Правила и распорядок -->
+      <div class="section-title">Правила и распорядок</div>
+
       <!-- 1. Часы передач -->
       <div class="faq-card">
         <div class="faq-question">Часы передач</div>
@@ -245,6 +255,19 @@
         </div>
       </div>
 
+      <!-- 5. Список разрешённых продуктов -->
+      <div class="faq-card">
+        <div class="faq-question">Список разрешённых продуктов</div>
+        <div class="faq-answer">
+          <div class="spisok-img">
+            <img src="img/spisok-produktov.png" alt="Список продуктов" />
+          </div>
+        </div>
+      </div>
+
+      <!-- Раздел 2: Условия размещения в коммерческих палатах -->
+      <div class="section-title">Условия размещения в коммерческих палатах</div>
+
       <!-- 2. Посещения -->
       <div class="faq-card">
         <div class="faq-question">
@@ -264,7 +287,7 @@
       <!-- 3. Стоимость и оплата -->
       <div class="faq-card">
         <div class="faq-question">
-          Стоимость и правила оплаты коммерческих палат
+          Правила оплаты коммерческих палат
         </div>
         <div class="faq-answer">
           <ul>
@@ -283,7 +306,7 @@
 
       <!-- 4. Оснащение палат -->
       <div class="faq-card">
-        <div class="faq-question">Оснащение коммерческих палат</div>
+        <div class="faq-question">Оснащение и стоимость коммерческих палат</div>
         <div class="faq-answer">
           <div class="rooms">
             <div class="room-card">
@@ -291,7 +314,7 @@
                 <h3>Двухместная палата в дородовом отделении</h3>
                 <ul>
                   🧊 Холодильник<br />
-                  🍵 Чайник<br />
+                  🫖 Чайник<br />
                   🚻 Санузел в палате<br />
                   🔥 Микроволновка в палате<br />
                   💁‍♀️ Фен<br />
@@ -312,8 +335,9 @@
                 <p>В блоке 2 палаты</p>
                 <ul>
                   🧊 Холодильник<br />
-                  🍵 Чайник<br />
-                  🚻 Санузел на блок
+                  🫖 Чайник<br />
+                  🚻 Санузел на блок<br />
+                  🪙 1800 р
                 </ul>
               </div>
               <div class="room-img">
@@ -326,9 +350,10 @@
                 <h3>Одноместная</h3>
                 <ul>
                   🧊 Холодильник<br />
-                  🍵 Чайник<br />
+                  🫖 Чайник<br />
                   📺 Телевизор<br />
-                  🔥 Микроволновка в палате
+                  🔥 Микроволновка в палате<br />
+                  🪙 2500 р
                 </ul>
               </div>
               <div class="room-img">
@@ -341,9 +366,10 @@
                 <h3>Семейная</h3>
                 <ul>
                   🧊 Холодильник<br />
-                  🍵 Чайник<br />
+                  🫖 Чайник<br />
                   🔥 Микроволновка в палате<br />
-                  📺 Телевизор
+                  📺 Телевизор<br />
+                  🪙 4500 р
                 </ul>
               </div>
               <div class="room-img">
@@ -354,13 +380,44 @@
         </div>
       </div>
 
-      <!-- 5. Список разрешённых продуктов -->
+      <!-- 9. Количество пациенток в палатах -->
       <div class="faq-card">
-        <div class="faq-question">Список разрешённых продуктов</div>
+        <div class="faq-question">Количество пациенток в палатах</div>
         <div class="faq-answer">
-          <div class="spisok-img">
-            <img src="img/spisok-produktov.png" alt="Список продуктов" />
-          </div>
+          <ul>
+            <li><b>Семейная</b> — мама, ребёнок и родственник</li>
+            <li><b>Одноместная</b> — мама и ребёнок, разрешены посещения</li>
+            <li>
+              <b>Двухместная</b> — 2 мамы и 2 ребёнка, разрешены посещения
+            </li>
+            <li><b>Общая</b> — до 4 мам с детьми</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Раздел 1: Организация родов и пребывание в роддоме -->
+      <div class="section-title">Организация родов и пребывание в роддоме</div>
+
+      <!-- 8. Госпитализация -->
+      <div class="faq-card">
+        <div class="faq-question">Онлайн регистрация и госпитализация</div>
+        <div class="faq-answer">
+          Для онлайн регистрации заполните
+          <a href="https://forms.gle/ZdRZxawEBd5auFZV7" target="_blank"
+            >форму</a
+          >
+          и отправьте скрининги на
+          <a href="https://t.me/rody_v_dvoyke/15" target="_blank"
+            >Линию заботы</a
+          >
+          <ul>
+            <li><b>Плановая госпитализация</b> — будни с 08:00 до 14:00</li>
+            <li><b>Вход</b> — №1 (приёмный покой)</li>
+            <li>
+              <b>При себе</b> — паспорт, полис, СНИЛС, диспансерная книжка, при
+              браке — копии паспортов и свидетельства о браке
+            </li>
+          </ul>
         </div>
       </div>
 
@@ -405,43 +462,8 @@
         </div>
       </div>
 
-      <!-- 8. Госпитализация -->
-      <div class="faq-card">
-        <div class="faq-question">Онлайн регистрация и госпитализация</div>
-        <div class="faq-answer">
-          Для онлайн регистрации заполните
-          <a href="https://forms.gle/ZdRZxawEBd5auFZV7" target="_blank"
-            >форму</a
-          >
-          и отправьте скрининги на
-          <a href="https://t.me/rody_v_dvoyke/15" target="_blank"
-            >Линию заботы</a
-          >
-          <ul>
-            <li><b>Плановая госпитализация</b> — будни с 08:00 до 14:00</li>
-            <li><b>Вход</b> — №1 (приёмный покой)</li>
-            <li>
-              <b>При себе</b> — паспорт, полис, СНИЛС, диспансерная книжка, при
-              браке — копии паспортов и свидетельства о браке
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- 9. Количество пациенток в палатах -->
-      <div class="faq-card">
-        <div class="faq-question">Количество пациенток в палатах</div>
-        <div class="faq-answer">
-          <ul>
-            <li><b>Семейная</b> — мама, ребёнок и родственник</li>
-            <li><b>Одноместная</b> — мама и ребёнок, разрешены посещения</li>
-            <li>
-              <b>Двухместная</b> — 2 мамы и 2 ребёнка, разрешены посещения
-            </li>
-            <li><b>Общая</b> — до 4 мам с детьми</li>
-          </ul>
-        </div>
-      </div>
+      <!-- Раздел 4: Завершение пребывания -->
+      <div class="section-title">Завершение пребывания</div>
 
       <!-- 10. Выписка по дням -->
       <div class="faq-card">
