--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   🚻 Санузел в палате<br />
                   🔥 Микроволновка в палате<br />
                   💁‍♀️ Фен<br />
-                  🪟 Жалюзи блэкаут
+                  🪟 Жалюзи блэкаут<br />
                   🪙 1800 р
                 </ul>
               </div>
